--- a/bakalarka-frontend/src/app/pages/students/diploma-dialog/diploma-dialog.component.html
+++ b/bakalarka-frontend/src/app/pages/students/diploma-dialog/diploma-dialog.component.html
@@ -1,60 +1,107 @@
+ 
+
+<!--
+<div class="row" *ngIf="loading" flex>
+  <div class="col-lg-4">
+    <form  class="filterForm">
+      <select
+      class="custom-select"
+      formControlName="zameranie"
+      margin-bottom
+      >
+        <option value="matematicke">Matematické súťaže</option>
+        <option value="informaticke">Informatické súťaže</option>
+        <option value="fyzikalne">Fyzikálne súťaže</option>
+        <option value="soc">SOČ</option>
+        <option value="ine">Iné</option>
+      </select>
+      <select
+          *ngIf="filterForm.controls.zameranie.value !== 'ine'"
+          class="custom-select"
+          formControlName="sutaze"
+          margin-bottom
+        >
+          <option *ngIf="filterForm.controls.zameranie.value == 'matematicke'" value="olympiada">Matematická olympiáda - medzinárodné kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'matematicke'" value="olympiada">Matematická olympiáda - celoštátne kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'matematicke'" value="olympiada">Matematická olympiáda - krajské kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'matematicke'" value="ibobor">iBobor</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'matematicke'" value="olympiada">Pangea - celoštátne kolo</option>
+  
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">ProFIIT</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Net@FIIT</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">IIT.SRC Junior</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Medzinárodná olympiáda v informatike</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Stredoeurópska olympiáda v informatike (CEOI)</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Olympiáda v informatike - celoštátne kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Olympiáda v informatike - krajské kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">NAG (súťaž Sieťových akadémií) - medzinárodné kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">NAG (súťaž Sieťových akadémií) - celoštátne kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Junior Internet</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Junior Internet - kateg. Junior APP</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Junior Internet - kateg. Junior WEB, DESIGN, LEARN</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Zenit - celoštátne kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">Zenit - krajské kolo</option>
+          <option *ngIf="filterForm.controls.zameranie.value == 'informaticke'" value="olympiada">RoboCupJunior - medzinárodné kolo</option>
+          <option value="olympiada">RoboCupJunior - celoštátne kolo</option> 
+      </select>
+    </form>
+    
+  </div>
+</div>
+-->
+
+
+
 <div class="wrapper">
   <p>
     Zameranie:
   </p>
 
-  <select [(ngModel)]="zameranie" class="custom-select" name="zameranie">
-    <option value="matematicke">Matematické súťaže</option>
-    <option value="informaticke">Informatické súťaže</option>
-    <option value="fyzikalne">Fyzikálne súťaže</option>
-    <option value="soc">SOČ</option>
-    <option value="ine">Iné</option>
+  <select [(ngModel)]="type" class="custom-select" name="type">
+    <option value="matematika">Matematické súťaže</option>
+    <option value="informatika">Informatické súťaže</option>
+    <option value="fyzika">Fyzikálne súťaže</option>
+    <option value="SOČ">SOČ</option>
+    <option value="iný">Iné</option>
   </select>
 </div>
 
+
+
+
 <div class="wrapper">
+
   <p>
     Názov:
   </p>
   
   <select [(ngModel)]="diploma_title" class="custom-select" name="diploma_title" >
     
-    <option value="olympiada">Matematická olympiáda - medzinárodné kolo</option>
-    <option value="olympiada">Matematická olympiáda - celoštátne kolo</option>
-    <option value="olympiada">Matematická olympiáda - krajské kolo</option>
-    <option value="ibobor">iBobor</option>
-    <option value="olympiada">Pangea - celoštátne kolo</option>
+    <option value="Matematická olympiáda">Matematická olympiáda</option>
+    <option value="iBobor">iBobor</option>
+    <option value="Pangea">Pangea</option>
    
-    <option value="olympiada">ProFIIT</option>
-    <option value="olympiada">Net@FIIT</option>
-    <option value="olympiada">IIT.SRC Junior</option>
-    <option value="olympiada">Medzinárodná olympiáda v informatike</option>
-    <option value="olympiada">Stredoeurópska olympiáda v informatike (CEOI)</option>
-    <option value="olympiada">Olympiáda v informatike - celoštátne kolo</option>
-    <option value="olympiada">Olympiáda v informatike - krajské kolo</option>
-    <option value="olympiada">NAG (súťaž Sieťových akadémií) - medzinárodné kolo</option>
-    <option value="olympiada">NAG (súťaž Sieťových akadémií) - celoštátne kolo</option>
-    <option value="olympiada">Junior Internet</option>
-    <option value="olympiada">Junior Internet - kateg. Junior APP</option>
-    <option value="olympiada">Junior Internet - kateg. Junior WEB, DESIGN, LEARN</option>
-    <option value="olympiada">Zenit - celoštátne kolo</option>
-    <option value="olympiada">Zenit - krajské kolo</option>
-    <option value="olympiada">RoboCupJunior - medzinárodné kolo</option>
-    <option value="olympiada">RoboCupJunior - celoštátne kolo</option> 
+    <option value="ProFIIT">ProFIIT</option>
+    <option value="Net@FIIT">Net@FIIT</option>
+    <option value="IIT.SRC Junior">IIT.SRC Junior</option>
+    <option value="Medzinárodná olympiáda v informatike">Medzinárodná olympiáda v informatike</option>
+    <option value="Stredoeurópska olympiáda v informatike (CEOI)">Stredoeurópska olympiáda v informatike (CEOI)</option>
+    <option value="Olympiáda v informatike">Olympiáda v informatike</option>
+    <option value="NAG (súťaž Sieťových akadémií)">NAG (súťaž Sieťových akadémií)</option>
+    <option value="Junior Internet">Junior Internet</option>
+    <option value="Junior Internet - kateg. Junior APP">Junior Internet - kateg. Junior APP</option>
+    <option value="Junior Internet - kateg. Junior WEB, DESIGN, LEARN">Junior Internet - kateg. Junior WEB, DESIGN, LEARN</option>
+    <option value="Zenit">Zenit</option>
+    <option value="RoboCupJunior">RoboCupJunior</option>
 
-    <option value="olympiada">Fyzikálna alympiáda - medzinárodné kolo</option>
-    <option value="olympiada">Fyzikálna alympiáda - celoštátne kolo</option>
-    <option value="olympiada">Fyzikálna alympiáda - krajské kolo</option>
-    <option value="olympiada">Turnaj mladých fyzikov - celoštátne kolo</option>
+    <option value="Fyzikálna olympiáda">Fyzikálna olympiáda</option>
+    <option value="Turnaj mladých fyzikov">Turnaj mladých fyzikov</option>
     
-    <option value="olympiada">SOČ - Informatika - celoštátne kolo</option>
-    <option value="olympiada">SOČ - Informatika - krajské kolo</option>
-    <option value="olympiada">SOČ - Matematika a fyzika - celoštátne kolo</option>
-    <option value="olympiada">SOČ - Matematika a fyzika - krajské kolo</option>
-    <option value="olympiada">SOČ - Elektronika a hardvér - celoštátne kolo</option>
-    <option value="olympiada">SOČ - Elektronika a hardvér - krajské kolo</option>
+    <option value="SOČ - Informatika">SOČ - Informatika</option>
+    <option value="SOČ - Matematika a fyzika">SOČ - Matematika a fyzika</option>
+    <option value="SOČ - Elektronika a hardvér">SOČ - Elektronika a hardvér</option>
 
-    <option value="olympiada">Oficálne IQ testy (spoločnosť Mensa)</option>
+    <option value="Oficálne IQ testy (spoločnosť Mensa)">Oficálne IQ testy (spoločnosť Mensa)</option>
   </select>  
 </div>
 
@@ -62,10 +109,10 @@
   <p>
     Kolo:
   </p>
-  <select [(ngModel)]="kolo" class="custom-select" name="kolo">
-    <option value="medzinarodne">Medzinárodné kolo</option>
-    <option value="krajske">Krajské kolo</option>
-    <option value="celostatne">Celoštátne kolo</option>
+  <select [(ngModel)]="round" class="custom-select" name="round">
+    <option value="medzinárodné">Medzinárodné kolo</option>
+    <option value="krajské">Krajské kolo</option>
+    <option value="celoštátne">Celoštátne kolo</option>
   </select>
 </div>
 
@@ -78,10 +125,69 @@
     <option value="1">1.miesto</option>
     <option value="2">2.miesto</option>
     <option value="3">3.miesto</option>
-    <option value="uspesny riesitel">úspešný riešiteľ</option>
+    <option value="úspešný riešiteľ">úspešný riešiteľ</option>
   </select>
 </div>
 
 
+<div class="wrapper">
+  <button class="btn btn-primary" (click)="onAddDiploma()">PRIDAŤ</button>
+  <p>{{oznam}}</p>
+</div>
 
-<button class="btn btn-primary" (click)="onAddDiploma()">PRIDAŤ</button>
+
+<!--
+<button class="btn btn-primary">Pridať nový diplom do zoznamu</button>
+
+
+<div class="wrapper">
+  <p>
+    Zameranie:
+  </p>
+
+  <select [(ngModel)]="type" class="custom-select" name="type">
+    <option value="matematika">Matematické súťaže</option>
+    <option value="informatika">Informatické súťaže</option>
+    <option value="fyzika">Fyzikálne súťaže</option>
+    <option value="SOČ">SOČ</option>
+    <option value="iný">Iné</option>
+  </select>
+  
+</div>
+
+<div class="wrapper">
+
+  <p>
+    Názov:
+  </p>
+  
+  <input [(ngModel)]="nazov" type="text" class="form-control" placeholder=""> 
+ 
+</div>
+
+<div class="wrapper">
+  <p>
+    Kolo:
+  </p>
+  <select [(ngModel)]="round" class="custom-select" name="round">
+    <option value="medzinárodné">Medzinárodné kolo</option>
+    <option value="krajské">Krajské kolo</option>
+    <option value="celoštátne">Celoštátne kolo</option>
+  </select>
+</div>
+
+<div class="wrapper">
+  <p>
+    Umiestnenie:
+  </p>
+  
+  <select [(ngModel)]="position" class="custom-select" name="position" >
+    <option value="1">1.miesto</option>
+    <option value="2">2.miesto</option>
+    <option value="3">3.miesto</option>
+    <option value="úspešný riešiteľ">úspešný riešiteľ</option>
+  </select>
+</div>
+
+-->
+  
