--- a/bakalarka-frontend/src/app/pages/students/prediction/model-import/model-import.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/model-import/model-import.component.html
@@ -1,3 +1,37 @@
-<p>
-  model-import works!
-</p>
+<h1 class="display-3">Dostupné modely</h1>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col1">Názov modelu</th>
+        <th scope="col2">Predmet</th>
+        <th scope="col3">Akcia</th>
+       
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let model of available_models" >
+        <td>{{ model["name"] }}</td>
+        <td>{{ model["PREDMET"] }}</td>
+        
+        <td>
+          <button (click)="open_model_details(model)" >Detail</button>
+        </td>
+        
+      </tr>
+    </tbody>
+  </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
