--- a/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
@@ -10,7 +10,7 @@
   <mat-form-field>
     <mat-label>Predmet: </mat-label>
     <mat-select [(value)]="selected_subject" [formControl]="selected_subject">
-      <mat-option *ngFor="let subject of imported_models" [value]="subject">
+      <mat-option *ngFor="let subject of imported_subjects" [value]="subject">
         {{ subject }}
       </mat-option>
     </mat-select>
@@ -25,14 +25,15 @@ color="primary"
 SPUSTI PREDIKCIU
 </button>
 
-<!-- {{risky_students[0].AIS_ID}} -->
+<br>
 
-<div *ngIf="risky_students">
-  <p>{{risky_students[0].AIS_ID}}</p>
-</div>
+<mat-form-field [hidden] = "!risky_students">
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="">
+</mat-form-field>
 
-<div *ngIf="risky_students">
-<table mat-table [dataSource]="risky_students" class="mat-elevation-z8">
+
+<table mat-table *ngIf="risky_students" [dataSource]="data_source_risky_students" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> id </th>
     <td mat-cell *matCellDef="let element"> {{element.AIS_ID}} </td>
@@ -49,7 +50,8 @@ SPUSTI PREDIKCIU
   <tr mat-header-row *matHeaderRowDef="displayed_columns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayed_columns"></tr>
 </table>
-</div>
+<mat-paginator [hidden]="!risky_students" [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
 
 </div>
 
@@ -60,19 +62,4 @@ SPUSTI PREDIKCIU
 <app-model-import></app-model-import>
 
 
-<p> rok nastupu: {{ school_year }} </p>
-<p> predmet: {{ selected_subject }} </p>
 
-<p>
-  prediction works!
-</p>
-<button
-mat-raised-button
-color="primary"
-(click)="communicatePython()"
->
-Komunikuj s Pythonom
-</button>
-<h3>Textik: {{ text }}</h3>
-<p>poznamka: {{ pozn }}</p>
-</div>
