--- a/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.scss
+++ b/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.scss
@@ -1,10 +1,10 @@
 #left {
-    width: 500px;
+    width: 50%;
     float: left;
 }
 
 #right {
-    width: 300px;
+    width: 50%;
     overflow: hidden;
 }
 
