--- a/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
@@ -1,6 +1,8 @@
-<div id="left">
+<div>
 <h1 class="display-3">Predikcie</h1>
 
+
+<h2 id="general-info" class="section-header" padding>Spustenie predikcie</h2>
 <form>
   <mat-form-field>
     <mat-label>Rok nastupu: </mat-label>
@@ -57,11 +59,13 @@ SPUSTI PREDIKCIU
 
 
 
-<div id="right">
+
 
 <app-model-import></app-model-import>
 
+
+
 <app-model-create></app-model-create>
 
-</div>
+
 
